@@ -8,3 +8,7 @@ doc_files = COPYING
             ChangeLog
             examples/
             Documents/
+group = Applications/Engineering
+requires = PyQt >= 3.11
+	python >= 2.3
+	numarray >= 1.0
