@@ -1,5 +1,24 @@
 #!/usr/bin/env python
 # Veusz distutils setup script
+# see the file INSTALL for details on how to install Veusz
+
+#    Copyright (C) 2005 Jeremy S. Sanders
+#    Email: Jeremy Sanders <jeremy@jeremysanders.net>
+#
+#    This program is free software; you can redistribute it and/or modify
+#    it under the terms of the GNU General Public License as published by
+#    the Free Software Foundation; either version 2 of the License, or
+#    (at your option) any later version.
+#
+#    This program is distributed in the hope that it will be useful,
+#    but WITHOUT ANY WARRANTY; without even the implied warranty of
+#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+#    GNU General Public License for more details.
+#
+#    You should have received a copy of the GNU General Public License
+#    along with this program; if not, write to the Free Software
+#    Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+##############################################################################
 
 # $Id$
 
@@ -39,6 +58,7 @@ setup(name = 'veusz',
                       'veusz.windows': 'windows' },
       package_data = { 'veusz.windows': ['icons/*.png'],
                        'veusz': ['VERSION', 'images/*.png'] },
+      scripts = ['scripts/veusz', 'scripts/veusz_listen'],
       packages = ['veusz',
                   'veusz.dialogs',
                   'veusz.document',
